<resources>
    <!--    Strings of main Activity-->
    <string name="app_name">Basic Android App</string>
    <string name="lblDatos">Datos del ejercicio</string>
    <string name="lblEditText">Ingrese los datos</string>
    <string name="lblEjercicio">Seleccione el ejercicio</string>
    <string name="btnCalcular">Calcular</string>

    <string-array name="exOptions">
        <item>Estado estudiante</item>
        <item>Raíces de una ecuación</item>
        <item>Año bisiesto</item>
        <item>Mi edad exacta</item>
        <item>MCM</item>
    </string-array>

    <string name="lbl1">Ingrese la nota</string>
    <string name="lbl2">Ingrese una ecuacion(ax^2+bx+c)</string>
    <string name="lbl3">Ingrese un año</string>
    <string name="lbl4">Ingrese una fecha</string>
    <string name="lbl5">Ingrese tres numeros</string>

    <!--    Strings of StudentStatus Activity-->
    <string name="studentStatus">Estado del estudiante</string>
    <string name="lblmessage">El estudiante se encuentra:</string>
    <string name="bad_opt">MALO</string>
    <string name="regular_opt">REGULAR</string>
    <string name="good_opt">BUENO</string>
    <string name="excellent_opt">EXCELENTE</string>

    <!--    Strings of SQRT Activity -->
    <string name="roots_title">Ecuación de segundo grado</string>
    <string name="equation">1x^2 + 4x +8</string>
    <string name="lblroots">Las raices son:</string>
    <string name="root1"> sol1</string>
    <string name="root2">sol2</string>
    <string name="no_sol">SIN SOLUCION</string>

    <!--    Strings of LeapYear Activity-->
    <string name="leap_year_title">Año Bisiesto</string>
    <string name="leap_year_year">2020</string>
    <string name="leap_year_true">Es un año bisiesto</string>
    <string name="leap_year_false">No es un año bisiesto</string>

    <!--    Strings of MyExactYear Activity-->
    <string name="MEA_title">Mi Edad exacta</string>
    <string name="MEA_date">xx/xx/xxxx</string>
    <string name="MEA_desc">Mi edad en:</string>
    <string name="MEA_years">Años: xx</string>
    <string name="MEA_months">Meses: xxx</string>
    <string name="MEA_days">Dias: 15xxx</string>
    <string name="MEA_hours">Horas: 21xxx</string>
    <string name="MEA_mins">Minutos: zzzz</string>
    <string name="MEA_secs">Segundos: xxxx</string>

    <!--    Strings of MCM Activity-->
    <string name="MCM_title">Mínimo común divisor</string>
    <string name="MCM_desc">El MCD de ## es:</string>
    <string name="MCM_number">##</string>


</resources>